attempt to fix invisible buttons 4

--- a/assets/css/Mobile_overlayUI.css
+++ b/assets/css/Mobile_overlayUI.css
@@ -123,8 +123,8 @@
 #ring-control-left{
     /* left: var(--ring-ctrl-padding-x); */
     left: 200px;
-    /* background: var(--left-arrow-icon-url); */
-    background: red;
+    background: var(--left-arrow-icon-url);
+    background-color: red;
     background-size: 100%, 100%;
     background-repeat: no-repeat;
 }
